k8s/overlay/staging/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-nginx
  namespace: example-app-production
spec:
  parentRefs:
    - name: http
      namespace: kgateway-system
      sectionName: http
  hostnames:
    - test.koellgma.de
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: my-nginx
          port: 80
