k8s/overlay/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
    cert-manager.io/cluster-issuer: "selfsigned-she-ca"
spec:
  ingressClassName: nginx-internal
  tls:
    - hosts:
        - test.she-test.com
      secretName: app-tls
  rules:
    - host: test.she-test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-nginx
                port:
                  number: 80
